--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@oslojs/encoding": "^1.1.0",
     "drizzle-orm": "^0.33.0",
     "googleapis": "^144.0.0",
+    "minio": "^8.0.2",
     "zod": "^3.23.8"
   }
 }
