maybe building dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-DATABASE_URL=file:local.db
+# db
+DATABASE_URL=file:local.db 
 
+# google login
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+REDIRECT_URI=http://localhost:5173/authorize
+
+# minio
 MINIO_URL=
 MINIO_KEY=
 MINIO_SECRET=
