--- a/package.json
+++ b/package.json
@@ -16,28 +16,30 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "^2.8.2",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.22.0",
+    "drizzle-kit": "^0.28.1",
     "prettier": "^3.3.2",
-    "prettier-plugin-svelte": "^3.2.6",
+    "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "svelte": "^5.2.7",
+    "svelte-adapter-bun": "^0.5.2",
+    "svelte-check": "^4.1.0",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11"
   },
   "dependencies": {
     "@googleapis/docs": "^3.3.0",
-    "@libsql/client": "^0.9.0",
-    "@node-rs/argon2": "^1.1.0",
+    "@libsql/client": "^0.14.0",
+    "@node-rs/argon2": "^2.0.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.36.4",
     "googleapis": "^144.0.0",
     "minio": "^8.0.2",
     "zod": "^3.23.8"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
