--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # db
-DATABASE_URL=file:local.db 
+# DATABASE_URL=file:local.db
+POSTGRES_CONNECTION_STRING=
 TMP_DIR=./tmp
 MARKDOWN_EXPLAINER_DOC=MarkdownExplainer.md
 
