--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "doctex",
   "version": "0.0.1",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
