--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@sveltejs/adapter-node": "^5.2.9",
+    "@tabler/icons-svelte": "^3.25.0",
     "drizzle-orm": "^0.36.4",
     "googleapis": "^144.0.0",
     "minio": "^8.0.2",
