--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "doctex",
-  "version": "0.0.1",
-  "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
-    "lint": "prettier --check .",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
-  },
-  "devDependencies": {
-    "@sveltejs/kit": "^2.8.2",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.28.1",
-    "prettier": "^3.3.2",
-    "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "^5.2.7",
-    "svelte-check": "^4.1.0",
-    "tailwindcss": "^3.4.9",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11"
-  },
-  "dependencies": {
-    "@googleapis/docs": "^3.3.0",
-    "@node-rs/argon2": "^2.0.0",
-    "@oslojs/crypto": "^1.0.1",
-    "@oslojs/encoding": "^1.1.0",
-    "@sveltejs/adapter-node": "^5.2.9",
-    "@tabler/icons-svelte": "^3.25.0",
-    "drizzle-orm": "^0.36.4",
-    "googleapis": "^144.0.0",
-    "minio": "^8.0.2",
-    "postgres": "^3.4.4",
-    "svelte-pdf": "^1.0.23",
-    "zod": "^3.23.8"
-  },
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
+	"name": "doctex",
+	"version": "0.0.1",
+	"type": "module",
+	"license": "MIT",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check .",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio"
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "^2.8.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"drizzle-kit": "^0.28.1",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"svelte": "^5.2.7",
+		"svelte-check": "^4.1.0",
+		"tailwindcss": "^3.4.9",
+		"typescript": "^5.7.2",
+		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"@googleapis/docs": "^3.3.0",
+		"@node-rs/argon2": "^2.0.0",
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@tabler/icons-svelte": "^3.25.0",
+		"@types/imagemagick": "^0.0.35",
+		"drizzle-orm": "^0.36.4",
+		"googleapis": "^144.0.0",
+		"imagemagick": "^0.1.3",
+		"minio": "^8.0.2",
+		"postgres": "^3.4.4",
+		"zod": "^3.23.8"
+	},
+	"packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
