--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@tabler/icons-svelte": "^3.25.0",
 		"@types/imagemagick": "^0.0.35",
+		"@types/showdown": "^2.0.6",
 		"drizzle-orm": "^0.36.4",
 		"googleapis": "^144.0.0",
 		"imagemagick": "^0.1.3",
 		"minio": "^8.0.2",
 		"postgres": "^3.4.4",
+		"showdown": "^2.1.0",
 		"zod": "^3.23.8"
 	},
 	"packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
