--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.2.7",
+		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.1.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.7.2",
