--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,7 +2,7 @@ services:
   tex:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     env_file: .env
     restart: unless-stopped
     environment:
