--- a/compose.yaml
+++ b/compose.yaml
@@ -4,12 +4,12 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
-    restart: unless-stopped
     ports:
-      - 5173:3000
+      - 5173:5173
     environment:
       - INPUT_ROOT_FILE=main.tex
       - INPUT_CONTINUE_ON_ERROR=true
       - TMP_DIR=/tmp
     volumes:
       - ./tmp:/tmp
+      - ./src:/app/src
