--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"minio": "^8.0.2",
 		"postgres": "^3.4.4",
 		"showdown": "^2.1.0",
+		"unzipit": "^1.4.3",
 		"zod": "^3.23.8"
 	},
 	"packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
