use bun shell to run command

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@sveltejs/kit": "^2.8.2",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/bun": "^1.2.2",
 		"autoprefixer": "^10.4.20",
 		"drizzle-kit": "^0.28.1",
 		"prettier": "^3.3.2",
