added option to log queries

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # db
 # DATABASE_URL=file:local.db
 POSTGRES_CONNECTION_STRING=
+POSTGRES_LOG_QUERIES=false
 TMP_DIR=./tmp
 MARKDOWN_EXPLAINER_DOC=MarkdownExplainer.md
 
