Add ansi_up for better log formatting
- Added `ansi_up` package to enhance log output.
- Updated Dockerfiles to remove Windows line endings from scripts.
- Modified build function to convert logs and errors to HTML format using `ansi_up`.
- Adjusted Svelte component to render logs as HTML.

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -31,6 +31,9 @@ COPY --from=bun /usr/local/bin/bun /usr/local/bin/bun
 WORKDIR /tex
 COPY --chmod=777 tex/ ./
 
+# remove windows line endings
+RUN sed -i 's/\r$//' /tex/entrypoint.sh
+
 # add bun to PATH
 RUN echo 'export PATH=$PATH:/usr/local/bin' >> /etc/profile
 
