--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@tabler/icons-svelte": "^3.25.0",
 		"@types/imagemagick": "^0.0.35",
 		"@types/showdown": "^2.0.6",
+		"ansi_up": "^6.0.2",
 		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.36.4",
 		"googleapis": "^144.0.0",
