--- a/package.json
+++ b/package.json
@@ -16,40 +16,41 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.20.5",
-		"@sveltejs/vite-plugin-svelte": "^4.0.4",
-		"@types/bun": "^1.2.9",
-		"autoprefixer": "^10.4.21",
-		"drizzle-kit": "^0.28.1",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^5.25.10",
-		"svelte-adapter-bun": "^0.5.2",
-		"svelte-check": "^4.1.5",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.8.3",
-		"vite": "^5.4.17"
+		"@sveltejs/kit": "~2.20.5",
+		"@sveltejs/vite-plugin-svelte": "~4.0.4",
+		"@types/bun": "~1.2.9",
+		"autoprefixer": "~10.4.21",
+		"drizzle-kit": "~0.28.1",
+		"prettier": "~3.5.3",
+		"prettier-plugin-svelte": "~3.3.3",
+		"prettier-plugin-tailwindcss": "~0.6.11",
+		"svelte": "~5.25.10",
+		"svelte-adapter-bun": "~0.5.2",
+		"svelte-check": "~4.1.5",
+		"tailwindcss": "~3.4.17",
+		"typescript": "~5.8.3",
+		"vite": "~5.4.17"
 	},
 	"dependencies": {
-		"@googleapis/docs": "^3.3.3",
-		"@node-rs/argon2": "^2.0.2",
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@tabler/icons-svelte": "^3.31.0",
-		"@types/imagemagick": "^0.0.35",
-		"@types/showdown": "^2.0.6",
-		"ansi_up": "^6.0.5",
-		"date-fns": "^4.1.0",
-		"drizzle-orm": "^0.36.4",
-		"googleapis": "^144.0.0",
-		"imagemagick": "^0.1.3",
-		"minio": "^8.0.5",
-		"postgres": "^3.4.5",
-		"showdown": "^2.1.0",
-		"unzipit": "^1.4.3",
-		"zod": "^3.24.2"
+		"@google/genai": "^0.8.0",
+		"@googleapis/docs": "~3.3.3",
+		"@node-rs/argon2": "~2.0.2",
+		"@oslojs/crypto": "~1.0.1",
+		"@oslojs/encoding": "~1.1.0",
+		"@sveltejs/adapter-node": "~5.2.12",
+		"@tabler/icons-svelte": "~3.31.0",
+		"@types/imagemagick": "~0.0.35",
+		"@types/showdown": "~2.0.6",
+		"ansi_up": "~6.0.5",
+		"date-fns": "~4.1.0",
+		"drizzle-orm": "~0.36.4",
+		"googleapis": "~144.0.0",
+		"imagemagick": "~0.1.3",
+		"minio": "~8.0.5",
+		"postgres": "~3.4.5",
+		"showdown": "~2.1.0",
+		"unzipit": "~1.4.3",
+		"zod": "~3.24.2"
 	},
 	"packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f632 42cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
