--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@types/imagemagick": "~0.0.35",
 		"@types/showdown": "~2.0.6",
 		"ansi_up": "~6.0.5",
+		"citation-js": "^0.7.18",
+		"citeproc": "^2.4.63",
 		"date-fns": "~4.1.0",
 		"drizzle-orm": "~0.36.4",
 		"googleapis": "~144.0.0",
